--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
   "devDependencies": {
     "babel-core": "^6.0.20",
     "babel-eslint": "^4.1.3",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
+    "jest": "^20.0.4",
     "react-hot-loader": "^1.3.0",
+    "react-test-renderer": "^15.6.1",
+    "regenerator-runtime": "^0.10.5",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
