--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "test"
   },
   "dependencies": {
+    "chai": "^4.1.0",
+    "mocha": "^3.4.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
@@ -18,6 +20,7 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
+    "enzyme": "^2.9.1",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
     "jest": "^20.0.4",
